--- a/assignment2.html
+++ b/assignment2.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <!-- head tag -->
 <head>
+
 	<meta charset="utf-8">
-	<!-- title for web application -->
-	<title>Image Gallery | COMP1073 Client-Side JavaScript</title>
-	<link rel="stylesheet" href="css/gallery.css">
+	
+		<!-- title for web application -->
+	<title>Image Gallery | COMP1073 Client-Side JavaScript by Jay Patel</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<!-- h1 tag for main title -->
